[package]
name = "validator_apy_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.0"
chrono = "0.4.38"
config = "0.14.0"
log = "0.4.21"
reqwest = "0.12.4"
serde = "1.0.202"
serde_json = "1.0.117"
shellexpand = "3.1.0"
solana-account-decoder = "1.18.14"
solana-client = "1.18.14"
solana-program = "1.18.14"
solana-rpc-client-api = "1.18.14"
solana-sdk = "1.18.14"
solana-transaction-status = "1.18.14"
spl-stake-pool = "1.0.0"
tokio = "1.37.0"
